k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orizon
  labels:
    app.kubernetes.io/part-of: orizon
